feat: log printing is improved, added a new endpoint to get user by id

--- a/src/app/dependency-injection/application.yaml
+++ b/src/app/dependency-injection/application.yaml
@@ -1,3 +1,4 @@
 imports:
+  - { resource: ./shared/application.yaml }
   - { resource: ./users/application.yaml }
   - { resource: ./auth/application.yaml }
